# ctfd-plugin-tsgctf

./: .eslintrc.js  .gitignore  README.md  __init__.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint.yml
assets/: badge.js
badge/: __init__.py  model.py
