[tool.poetry]
name = "tsgctf-plugin"
version = "0.0.1"
description = ""
authors = ["TSG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ctfd = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
